k8s/app-with-secret.yml
apiVersion: v1
kind: Service
metadata:
  name: task-service
spec:
  type: NodePort
  selector:
    app: task-app
  ports:
  - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-app
  labels:
    app: task-app
spec:
  selector:
    matchLabels:
      app: task-app
  minReadySeconds: 15
  template:
    metadata:
      labels:
        app: task-app
      name: task-app
    spec:
      containers:
        - name: task-app
          image: gcr.io/PROJECT_ID/app:v1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: credential-volume
              mountPath: /usr/src/app/credentials
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
      volumes:
        - name: credential-volume
          secret:
            secretName: credential-secret
