k8s/app.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
  - port: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  selector:
    matchLabels:
      app: todo-app
  minReadySeconds: 15
  template:
    metadata:
      labels:
        app: todo-app
      name: todo-app
    spec:
      containers:
        - name: todo-app
          image: gcr.io/PROJECT_ID/app:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            requests:
                memory: "128Mi"
